# EGObox

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  dist-workspace.toml  mkdocs.yml
.github/: copilot-instructions.md
.github/workflows/: docs.yml  gpqa-release.yml  gpx-release.yml  pytest.yml  python.yml  website.yml
crates/doe/: Cargo.toml
crates/ego/: Cargo.toml
crates/gp/: Cargo.toml
crates/gpqa/: Cargo.toml
crates/gpx/: CHANGELOG.md  Cargo.toml  README.md
crates/gpx/src/: commands.rs  io.rs  lib.rs  main.rs  services.rs
crates/moe/: Cargo.toml  README.md
doc/: Egor_Tutorial.ipynb  Gpx_MaunaLoaCO2.ipynb  Gpx_Tutorial.ipynb  README.md  gpx_cli.ipynb
docs/: examples.md  getting-started.md  index.md  reference.md  tutorials.md
notebooks/: Egor_Tutorial.ipynb  README.md  gpx_cli.ipynb
python/: Cargo.toml  README.md  pyproject.toml
python/agent/: egobox-gpx-cli.md
python/egobox/: __init__.py  egobox.pyi  gpx_cli.py
python/examples/: g24_fcstr.py  kriging.py  rastrigin.py
python/src/: domain.rs  egor.rs  gp_config.rs  gp_mix.rs  lib.rs  logging.rs  q_par_config.rs  qei_config.rs  sampling.rs  sparse_gp_mix.rs  strategy_config.rs  trego_config.rs  types.rs
python/tests/: test_egor.py  test_examples.py  test_gpmix.py  test_gpx_cli.py
site/: 404.html  index.html  sitemap.xml
site/examples/: index.html
site/getting-started/: index.html
site/reference/: index.html
site/stylesheets/: extra.css
site/tutorials/: index.html
website/: README.md  config.toml  zola.toml
website/content/: _index.md  cookbook.md  examples.md  (+4 more)
(+106 files in other folders)
