[package]
name = "gpx"
version = "0.4.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"
description = "GP surrogate executable for quality assessment, I/O specification, and prediction"
keywords = ["machine-learning", "bayesian", "optimization"]
categories = ["algorithms", "mathematics", "science"]

[dependencies]
egobox-ego = { version = "0.38", path = "../ego" }
egobox-moe = { version = "0.35", path = "../moe" }
anyhow.workspace = true
clap.workspace = true
bincode.workspace = true
serde_json.workspace = true
rayon.workspace = true
ndarray.workspace = true
ndarray-npy.workspace = true
linfa.workspace = true

[[bin]]
name = "gpx"
